@@ -1,3 +1,6 @@
+* Add price_digits
+* Add parameter price_decimal
+
 Version 3.4.0 - 2014-10-20
 * Bug fixes (see mercurial logs for details)
 
